uncomment terraform resource

--- a/clusters/tfkind/terraform.yaml
+++ b/clusters/tfkind/terraform.yaml
@@ -1,37 +1,37 @@
-# apiVersion: infra.contrib.fluxcd.io/v1alpha2
-# kind: Terraform
-# metadata:
-#   name: my-terraform-resource
-#   namespace: flux-system
-# spec:
-#   interval: 1m
-#   approvePlan: auto
-#   destroyResourcesOnDeletion: true
-#   path: ./terraform/azure/storage-account
-#   sourceRef:
-#     kind: GitRepository
-#     name: flux-system
-#   runnerPodTemplate:
-#     spec:
-#       image: docker.io/vimuchiaroni/tf-az-cli:1.0
-#       env:
-#         - name: ARM_SUBSCRIPTION_ID
-#           valueFrom:
-#             secretKeyRef:
-#               name: azure-auth
-#               key: ARM_SUBSCRIPTION_ID
-#         - name: ARM_CLIENT_ID
-#           valueFrom:
-#             secretKeyRef:
-#               name: azure-auth
-#               key: ARM_CLIENT_ID
-#         - name: ARM_CLIENT_SECRET
-#           valueFrom:
-#             secretKeyRef:
-#               name: azure-auth
-#               key: ARM_CLIENT_SECRET
-#         - name: ARM_TENANT_ID
-#           valueFrom:
-#             secretKeyRef:
-#               name: azure-auth
-#               key: ARM_TENANT_ID
+apiVersion: infra.contrib.fluxcd.io/v1alpha2
+kind: Terraform
+metadata:
+  name: my-terraform-resource
+  namespace: flux-system
+spec:
+  interval: 1m
+  approvePlan: auto
+  destroyResourcesOnDeletion: true
+  path: ./terraform/azure/storage-account
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  runnerPodTemplate:
+    spec:
+      image: docker.io/vimuchiaroni/tf-az-cli:1.0
+      env:
+        - name: ARM_SUBSCRIPTION_ID
+          valueFrom:
+            secretKeyRef:
+              name: azure-auth
+              key: ARM_SUBSCRIPTION_ID
+        - name: ARM_CLIENT_ID
+          valueFrom:
+            secretKeyRef:
+              name: azure-auth
+              key: ARM_CLIENT_ID
+        - name: ARM_CLIENT_SECRET
+          valueFrom:
+            secretKeyRef:
+              name: azure-auth
+              key: ARM_CLIENT_SECRET
+        - name: ARM_TENANT_ID
+          valueFrom:
+            secretKeyRef:
+              name: azure-auth
+              key: ARM_TENANT_ID
